# artificial_netlist_generator

./: .gitmodules  README.md
include/openroad/: OpenRoad.hh  Version.hh
src/: CMakeLists.txt  OpenRoad.cc  OpenRoad.i
src/ArtNetGen/: CMakeLists.txt
src/ArtNetGen/include/artnetgen/: MakeArtNetGen.h  artNetGen.h
src/ArtNetGen/src/: MakeArtNetGen.cpp  artNetGen.cpp  artNetGen.i  artNetGen.tcl  bin.cpp  bin.h  distMatching.cpp  distribution.cpp  logger.cpp  logger.h  netlist.cpp  netlist.h  node.cpp  node.h  techMapping.cpp  writeSpec.cpp
src/dbSta/include/db_sta/: dbNetwork.hh
src/dbSta/src/: CMakeLists.txt  dbNetwork.cc  dbReadVerilog.cc  dbSta.cc
test/asap7/: run_artnetgen.tcl  test_circuit.sdc  test_circuit.spec  test_circuit.v
test/nangate45/: .run_extract.tcl.swp  onlyUseCell.list  openroad  run_artnetgen.tcl  run_extract.tcl  test_circuit.def  test_circuit.spec  test_circuit.v
test/nangate45/tech_lef/: NangateOpenCellLibrary_revised.lef
